test_scripts/errors/let_bad_syntax.stderr
Parse Error:
 1 | let = 5;
         ^
Error: Expected ident after let, found Equal
Failed to parse script
